--- a/index.html
+++ b/index.html
@@ -14,30 +14,40 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1>Technology tree</h1>
+			<h1>Дерево технологий</h1>
+			<h3 class="main__text">
+				С помощью нашего сайта вы пройдёте пути от новичка до профессионала.
+				Здесь будет находится вся доступная информация которая поможет вам стать
+				фронтенд разработчиком.
+			</h3>
 			<div class="images">
-				<div>
-					<span>HTML</span>
-					<a class="html__icon" href="html.html" target="_blank">
-						<i
-							data-tooltip="Первые шаги на пути к цели"
-							class="fab fa-html5 fa-2x"
-						></i>
-					</a>
+				<div class="union__images">
+					<div>
+						<span class="icon__text">HTML</span>
+						<a class="html__icon" href="html.html" target="_blank">
+							<i
+								data-tooltip="Первые шаги на пути к цели"
+								class="fab fa-html5 fa-2x"
+							></i>
+						</a>
+					</div>
+					<div>
+						<span>CSS</span>
+						<a class="css__icon" href="html.html" target="_blank"
+							><i
+								data-tooltip="Первые шаги на пути к цели"
+								class="fab fa-css3-alt fa-2x"
+							></i
+						></a>
+					</div>
 				</div>
-				<div>
-					<span>CSS</span>
-					<a class="css__icon" href="#"
-						><i
-							data-tooltip="Половина пути пройдено"
-							class="fab fa-css3-alt fa-2x"
-						></i
-					></a>
-				</div>
-				<div>
+				<div class="ununion__image">
 					<span>JS</span>
-					<a class="js__icon" href="#"
-						><i data-tooltip="Пора искать работу" class="fab fa-js fa-2x"></i
+					<a class="js__icon" href="js.html" target="_blank"
+						><i
+							data-tooltip="Совсем скоро можно искать работу"
+							class="fab fa-js fa-2x"
+						></i
 					></a>
 				</div>
 			</div>
